// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconCamera /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconCamera /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconCamera /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconCamera /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconCamera /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconCamera /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconCamera /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconCamera /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconCamera /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconCamera /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconCamera /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconCamera /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M174.2 67L164 40H88.4L78.2 67H25v140h206V67h-56.8zm-45.9 116c-25.7 0-46.6-20.9-46.6-46.6 0-25.7 20.9-46.6 46.6-46.6s46.6 20.9 46.6 46.6c0 25.8-20.9 46.6-46.6 46.6zm29.7-46.8c0 16.4-13.3 29.7-29.7 29.7s-29.7-13.3-29.7-29.7 13.3-29.7 29.7-29.7 29.7 13.3 29.7 29.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconCamera /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
